2000-09-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.54 (retagged here)
	
	* lib/getaddrinfo.c, lib/getzenv.c,
	  smtpserver/mxverify.c, smtpserver/smtpcmds.c:
	    Pointer arithmetic with (void*) !! Urgh..

	* smtpserver/Makefile.in:
	    Oops.. QC failure, wrong dependency order -> compilation failure

	* router/functions.c, proto/cf/aliases.cf, proto/cf/fqdnalias.cf:
	    Suspended the  $(zapDSNnotify ...) processing development.
	    The issues I am trying solve there are rather -- complicated.

	* router/daemonsub.c:
	    Do test for "an inode in processing" while looking for
	    tasks in the router subdirs -- thus won't reinsert a
	    task already in active handling back into the queue.

	* proto/newdbprocessor.in:
	    Test for "^bind", "ldap", "ordered" and "unordered" db
	    types while regenerating the dbases.conf relations.

2000-09-18  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/transport.c:
	    A verbose debug printing of the 

2000-09-14  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpetrn.c:
	    Teached IPv6 support to the ETRN-Cluster code.

	* scheduler/transport.c, scheduler/mq2auth.c:
	    If system allows, create the "mailq" port in IPv6 space.
	    Know how to turn IPv4-Mapped-in-IPv6 address into IPv4 one,
	    and thus be able to test it neatly.

2000-09-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/getmxrr.c:
	    Even when we have seen EAI_AGAIN results, be a happy
	    camper in the end if we get ANY MX entries which have
	    valid address records.

2000-09-07  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* router/libdb/bsdbtree.c router/libdb/gdbm.c:
	    At iterative DB walkthroughs there were some
	    problems at these two functions.  Now they
	    should a) find data, b) terminate.

2000-09-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in:
	    Change linkage order of  -lnsl vs. -lxnet.